Se arregla error de rutas de imagenes en conflicto con ruta de productos con id

--- a/src/views/mysales.handlebars
+++ b/src/views/mysales.handlebars
@@ -22,7 +22,7 @@
                 >
                   <div class="d-flex align-items-center">
                     <img
-                      src="products/{{this.product_id.photo}}"
+                      src="/product/{{this.product_id.photo}}"
                       alt="{{this.product_id.title}}"
                       class="img-thumbnail me-3"
                       style="width: 80px; height: auto;"
