--- a/src/views/productsReal.handlebars
+++ b/src/views/productsReal.handlebars
@@ -120,7 +120,7 @@
       const productHtml = `
         <div class="col-md-3 mb-4">
           <div class="card">
-            <img src="/products/${product.photo}" class="card-img-top" alt="${product.title}">
+            <img src="/product/${product.photo}" class="card-img-top" alt="${product.title}">
             <div class="card-body">
               <h5 class="card-title">${product.title}</h5>
               <p class="card-text">Precio: $${product.price}</p>
