--- a/src/views/userPanel.handlebars
+++ b/src/views/userPanel.handlebars
@@ -28,7 +28,7 @@
         {{#each userProducts}}
         <div class="col-sm-6 col-lg-4 mb-4">
           <div class="card h-100">
-            <img src="/products/{{this.photo}}" class="card-img-top" alt="{{this.title}}">
+            <img src="/product/{{this.photo}}" class="card-img-top" alt="{{this.title}}">
             <div class="card-body">
               <h5 class="card-title">{{this.title}}</h5>
               <p class="card-text">Precio:${{this.price}} </p>
