--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -85,7 +85,7 @@
         <div class="card h-100">
           <div class="card-img-top" style="height: 250px; overflow: hidden;">
             <img
-              src="/products/{{this.photo}}"
+              src="product/{{this.photo}}"
               class="img-fluid"
               alt="{{this.title}}"
             />
@@ -93,7 +93,7 @@
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">{{this.title}}</h5>
             <p class="card-text">Precio: ${{this.price}}</p>
-            <a href="/products/{{this._id}}" class="btn btn-primary mt-auto">Ver
+            <a href="products/{{this._id}}" class="btn btn-primary mt-auto">Ver
               más</a>
           </div>
         </div>
