--- a/src/views/productDetail.handlebars
+++ b/src/views/productDetail.handlebars
@@ -6,7 +6,7 @@
         <div class="card" style="border-radius: 15px;">
           <div class="bg-image hover-overlay ripple ripple-surface ripple-surface-light text-center mt-3"
             data-mdb-ripple-color="light">
-            <img src="{{productFound.photo}}"
+            <img src="/product/{{productFound.photo}}"
               class="img-fluid" style="max-height: 300px; width: auto; border-radius: 15px;"
               alt="{{productFound.title}}" />
           </div>
